2014-01-13  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Check for numa.h.
	* src/procenv.c: Allow building on Linux systems whose
	  architectures are not NUMA-capable.

2014-01-10  James Hunt  <james.hunt@ubuntu.com>

	* man/procenv.1: Updated dates.
	* src/pr_list.c: Added header.
	* src/pr_list.h: Added header.
	* src/procenv.c:
	  - Update date.
	  - show_cpu_affinities(): Fix for FreeBSD which does
	    not provide dynamic cpu sets (CPU_ALLOC(3) et al).
	  - get_arch(): Added PPCspe and PPC64LE.
	* src/procenv.h: Added header.

2014-01-08  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_cpu_affinities(): Fix for hyper-threaded systems
	    (LP: #1251209) - thanks Dave Love.
	  - show_numa_memory(): Fix memory leak (calling free(3) rather than
	    numa_free_nodemask()).
	  - show_sizeof():
	    - Added lots of missing standard types (as documented in types.h(P)).
	    - Sorted list.
	  - show_cgroups_linux(): Fixed memory leak caused by misuse of
	    strsep(3).

2013-12-06  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: AM_INIT_AUTOMAKE: Ensure automake v1.13 is
	  passed 'serial-tests'.

2013-12-04  James Hunt  <james.hunt@ubuntu.com>

	* src/tests/check_all_args.in: Fix to sections regex to avoid
	  matching the TERMCAP variable (which contains various nasty
	  characters).

2013-12-03  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac:
	  - Put AC_COPYRIGHT onto one line for older automakes.
	  - Removed unused AC_TYPE_* checks.
	  - "Fix" to handle the automake 1.13 "serial-tests" fiasco
	     and always display test verbose test output.
	  - Conditionally use format-security compiler flag.
	* src/procenv.c: show_numa_memory(): Tell libnuma not to call exit(3). 
	* src/tests/check_all_args.in:
	  - Add debug handling.
	  - Use python rather than json_pp since the latter is not available
	    on older perl installations.

2013-12-02  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c: